# $Id$

2008-11-19	Vladlen Y. Koshelev

	* main/DAOs/ProtoDAO.class.php: fixed wrong cid-field table when lazy
	fetching collection.

2008-09-22	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: do not fetch collections for empty
	lists, spotted by <alexeydsov@gmail.com>.

2008-09-02	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveEnumeration.class.php: getList() fixed.

2008-08-30	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: mark peer as dead on link's failure.

2008-08-28	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
	preserve type for integer values.

2008-08-26	Konstantin V. Arkhipov

	* global.inc.php.tpl: don't create useless fake classes in
	__autoload_failed().

2008-08-12	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: standalone tag content
	mistakenly typographized; spotted by Sergey M. Skachkov.

	* test/core/FiltersTest.class.php: corresponding test. 

2008-08-07	Konstantin V. Arkhipov

	* 0.10.12 released.

2008-07-18	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: now does not serialize strings.

2008-07-15	Konstantin V. Arkhipov

	* main/DAOs/Workers/CacheDaoWorker.class.php: new scalable voodoo-like
	dao worker.

	* core/Cache/: increment/decrement implemented in all CachePeer's.

2008-07-14	Konstantin V. Arkhipov

	* main/DAOs/Workers/CommonDaoWorker.class.php: trivial getListByIds()
	optimization - now fetches only unique objects.

2008-06-17	Konstantin V. Arkhipov

	* 0.10.11 released.

2008-06-03	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: multi-get response deserialized
	all at once now; fixed cache corruption bug in case of custom __wakeup
	implementation.

2008-05-27	Konstantin V. Arkhipov

	* main/DAOs/Handlers/CacheSegmentHandler.class.php: backported from
	trunk.

	* core/Cache/: getList() and append() were backported from trunk for
	all CachePeer's.

	* main/DAOs/Workers/CommonDaoWorker.class.php,