@@ -63,7 +63,7 @@
 		{
 			$uc = $this->container;
 			
-			return
+			if (!$query->hasJoinedTable($uc->getHelperTable()))
 				$query->
 					join(
 						$uc->getHelperTable(),
@@ -77,7 +77,10 @@
 								$uc->getHelperTable()
 							)
 						)
-					)->
+					);
+			
+			return
+				$query->
 					andWhere(
 						Expression::eq(
 							new DBField(
